[gd_scene load_steps=4 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=2]
[ext_resource path="res://To Do Item.tscn" type="PackedScene" id=3]

[node name="Window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
task = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 15.0
margin_top = 63.0
margin_right = 1009.0
margin_bottom = 521.0
size_flags_horizontal = 3
size_flags_vertical = 0
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="+" type="Button" parent="."]
margin_left = 4.84521
margin_top = 4.79531
margin_right = 53.8452
margin_bottom = 53.7953
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delete" type="Button" parent="."]
margin_left = 859.03
margin_top = 4.79531
margin_right = 1010.03
margin_bottom = 53.7953
text = "Delete File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save" type="Button" parent="."]
margin_left = 62.6368
margin_top = 3.91108
margin_right = 162.637
margin_bottom = 53.9115
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="Button" parent="."]
margin_left = 171.901
margin_top = 3.91108
margin_right = 271.901
margin_bottom = 53.9115
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_edit" type="LineEdit" parent="."]
margin_left = 277.0
margin_top = 5.29648
margin_right = 509.0
margin_bottom = 51.2965
text = "Window_Name"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="+" to="." method="_on_plus_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
